Modify Login/Register Styling

--- a/public/styles.css
+++ b/public/styles.css
@@ -592,9 +592,12 @@ video {
   position: static;
 }
 
-.mx-72 {
-  margin-left: 18rem;
-  margin-right: 18rem;
+.relative {
+  position: relative;
+}
+
+.isolate {
+  isolation: isolate;
 }
 
 .mx-auto {
@@ -614,12 +617,24 @@ video {
   margin-top: 2.5rem;
 }
 
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
 .flex {
   display: flex;
 }
 
 .h-6 {
   height: 1.5rem;
+}
+
+.h-screen {
+  height: 100vh;
+}
+
+.min-h-screen {
+  min-height: 100vh;
 }
 
 .w-6 {
@@ -666,8 +681,21 @@ video {
   overflow: auto;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .stroke-current {
   stroke: currentColor;
+}
+
+.py-24 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+
+.font-brand {
+  font-family: nunito, ui-sans-serif, system-ui;
 }
 
 .text-2xl {
@@ -697,4 +725,11 @@ video {
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+@media (min-width: 640px) {
+  .sm\:py-32 {
+    padding-top: 8rem;
+    padding-bottom: 8rem;
+  }
 }
