--- a/auth/login.templ
+++ b/auth/login.templ
@@ -9,24 +9,18 @@ templ Login(form LoginFormValue, err error) {
 }
 
 templ LoginForm(form LoginFormValue, err error) {
-	<div id="login-form" class="flex flex-col justify-center items-center">
+	<div id="login-form" class="relative isolate overflow-hidden bg-base-200 flex justify-center items-center h-screen">
 		<form method="POST" action="/auth/login" hx-boost="true">
-			<h1 class="text-2xl font-bold mb-4">
-				Welcome to Your Bytesize Starter
-			</h1>
-			<p class="mb-10 w-96">
-				Please visit the <a href="http://127.0.0.1:8090/_/#" class="text-blue-500 underline">Pocketbase Admin UI</a> to create a user before attempting to login, alternatively you can vist the registration page by clicking the register button on the login form. First, create an admin account that you will use to login to Pocketbase in the future. Once you have logged in, navigate to the users collection and manually create a record with a <strong>Username</strong> and password. Use these credentials in the login form below.
-			</p>
-			<div class="card bg-neutral w-96 shadow-xl">
+			<div class="card bg-base-100 w-96 shadow-xl">
 				<div class="card-body">
-					<h2 class="card-title">Login</h2>
+					<h2 class="card-title base-content">Login</h2>
 					<input
 						type="text"
 						name="username"
 						id="username"
 						value={ form.username }
 						placeholder="Username"
-						class="input input-sm input-bordered input-primary w-full max-w-xs"
+						class="input input-sm input-bordered w-full max-w-xs"
 					/>
 					<input
 						type="text"
@@ -34,7 +28,7 @@ templ LoginForm(form LoginFormValue, err error) {
 						id="password"
 						value={ form.password }
 						placeholder="Password"
-						class="input input-sm input-bordered input-primary w-full max-w-xs"
+						class="input input-sm input-bordered w-full max-w-xs"
 					/>
 					if err != nil {
 						<div role="alert" class="alert alert-error">
@@ -54,9 +48,9 @@ templ LoginForm(form LoginFormValue, err error) {
 							<span>{ err.Error() }</span>
 						</div>
 					}
-					<div class="card-actions justify-end">
-						<button class="btn btn-ghost" hx-get="/auth/register" hx-target="#login-form" hx-swap="outerHTML">Register</button>
-						<button class="btn btn-primary" type="submit">Login</button>
+					<div class="card-actions justify-end  mt-5">
+						<button class="btn btn-sm btn-neutral btn-outline" hx-get="/auth/register" hx-target="#login-form" hx-swap="outerHTML">Register</button>
+						<button class="btn btn-sm btn-primary" type="submit">Login</button>
 					</div>
 				</div>
 			</div>
