--- a/auth/register.templ
+++ b/auth/register.templ
@@ -9,18 +9,18 @@ templ Register(form RegisterFormValue, err error) {
 }
 
 templ RegisterForm(form RegisterFormValue, err error) {
-	<div id="register-form" class="flex flex-col justify-center items-center mt-10">
+	<div id="register-form" class="relative isolate overflow-hidden bg-base-200 flex justify-center items-center h-screen">
 		<form method="POST" action="/auth/register" hx-boost="true">
-			<div class="card bg-neutral w-96 shadow-xl">
+			<div class="card bg-base-100 w-96 shadow-xl">
 				<div class="card-body">
-					<h2 class="card-title">Register</h2>
+					<h2 class="card-title base-content">Register</h2>
 					<input
 						type="text"
 						name="username"
 						id="username"
 						value={ form.username }
 						placeholder="Username"
-						class="input input-sm input-bordered input-primary w-full max-w-xs"
+						class="input input-sm input-bordered w-full max-w-xs"
 					/>
 					<input
 						type="text"
@@ -29,7 +29,7 @@ templ RegisterForm(form RegisterFormValue, err error) {
 						type="password"
 						value={ form.password }
 						placeholder="Password"
-						class="input input-sm input-bordered input-primary w-full max-w-xs"
+						class="input input-sm input-bordered w-full max-w-xs"
 					/>
 					<input
 						type="text"
@@ -38,7 +38,7 @@ templ RegisterForm(form RegisterFormValue, err error) {
 						type="password"
 						value={ form.password }
 						placeholder="Confirm Password"
-						class="input input-sm input-bordered input-primary w-full max-w-xs"
+						class="input input-sm input-bordered w-full max-w-xs"
 					/>
 					if err != nil {
 						<div role="alert" class="alert alert-error">
@@ -58,9 +58,9 @@ templ RegisterForm(form RegisterFormValue, err error) {
 							<span>{ err.Error() }</span>
 						</div>
 					}
-					<div class="card-actions justify-end">
-						<button class="btn btn-ghost" hx-get="/auth/login" hx-target="#register-form" hx-swap="outerHTML">Login</button>
-						<button class="btn btn-primary" type="submit">Register</button>
+					<div class="card-actions justify-end mt-5">
+						<button class="btn btn-sm btn-neutral btn-outline" hx-get="/auth/login" hx-target="#register-form" hx-swap="outerHTML">Login</button>
+						<button class="btn btn-sm btn-primary" type="submit">Register</button>
 					</div>
 				</div>
 			</div>
