--- a/lib/base.templ
+++ b/lib/base.templ
@@ -1,7 +1,7 @@
 package lib
 
 templ BaseLayout() {
-	<html lang="en">
+	<html lang="en" data-theme="winter">
 		<head>
 			<title>Bytesize</title>
 			<meta charset="utf-8"/>
@@ -12,7 +12,7 @@ templ BaseLayout() {
 			<link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/>
 			<script src="https://unpkg.com/htmx.org@1.9.10" integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC" crossorigin="anonymous"></script>
 		</head>
-		<body class="antialiased overflow-auto " hx-ext="response-targets">
+		<body class="antialiased overflow-auto bg-base-200 font-brand" hx-ext="response-targets">
 			<!--content wrapper -->
 			{ children... }
 		</body>
