--- a/lib/base.templ
+++ b/lib/base.templ
@@ -3,7 +3,7 @@ package lib
 templ BaseLayout() {
 	<html lang="en" data-theme="winter">
 		<head>
-			<title>Bytesize</title>
+			<title>OffsideFPL</title>
 			<meta charset="utf-8"/>
 			<link rel="icon" type="image/svg+xml" href="/favicon.svg"/>
 			<meta name="viewport" content="width=device-width"/>
@@ -11,10 +11,15 @@ templ BaseLayout() {
 			<script src="/public/index.js" defer></script>
 			<link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/>
 			<script src="https://unpkg.com/htmx.org@1.9.10" integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC" crossorigin="anonymous"></script>
+			<link rel="preconnect" href="https://fonts.googleapis.com"/>
+			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+			<link href="https://fonts.googleapis.com/css2?family=DotGothic16&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet"/>
 		</head>
-		<body class="antialiased overflow-auto bg-base-200 font-brand" hx-ext="response-targets">
-			<!--content wrapper -->
-			{ children... }
+		<body class="antialiased overflow-auto font-brand bg-base-200" hx-ext="response-targets">
+			<div>
+				<!--content wrapper -->
+				{ children... }
+			</div>
 		</body>
 	</html>
 }
