Moved navbar and created statbar

--- a/app/components/navbar.templ
+++ b/app/components/navbar.templ
@@ -1,4 +1,4 @@
-package lib
+package components
 
 templ Navbar() {
 	<div class="bg-base-100 shadow-sm text-base-content sticky top-0 z-30 flex h-24 w-full justify-center bg-opacity-90 backdrop-blur transition-shadow duration-100 [transform:translate3d(0,0,0)]">
