Created League Table

--- a/app/components/statbar.templ
+++ b/app/components/statbar.templ
@@ -1,16 +1,13 @@
 package components
 
-templ Statbar() {
+import "strconv"
+
+templ Statbar(gw int, manager, team string) {
 	<div class="stats shadow my-5">
-		<div class="stat">
-			<div class="stat-title">Cards Received</div>
-			<div class="stat-value">31K</div>
-			<div class="stat-desc">Jan 1st - Feb 1st</div>
-		</div>
-		<div class="stat">
-			<div class="stat-title">Cards Given</div>
-			<div class="stat-value">4,200</div>
-			<div class="stat-desc">↗︎ 400 (22%)</div>
+		<div class="stat place-items-center">
+			<div class="stat-title">Game Week { strconv.Itoa(gw) } Winner</div>
+			<div class="stat-value">{ manager }</div>
+			<div class="stat-desc">{ team }</div>
 		</div>
 	</div>
 }
