Created Fines component

--- a/app/components/league_table.templ
+++ b/app/components/league_table.templ
@@ -2,9 +2,10 @@ package components
 
 templ LeagueTable() {
 	<div class="overflow-x-auto w-72 rounded-lg">
+		<p class="font-bold text-base-content">League Standings</p>
 		<table class="table table-xs">
 			<!-- head -->
-			<thead class="bg-primary text-primary-content font-bold">
+			<thead class="bg-secondary text-primary-content font-bold">
 				<tr>
 					<th>Pos</th>
 					<th>Player</th>
@@ -35,6 +36,56 @@ templ LeagueTable() {
 					<td></td>
 				</tr>
 				<!-- row 3 -->
+				<tr>
+					<th>3</th>
+					<td>
+						<div>
+							<div class="font-bold">Ryan Shackleton</div>
+							<div class="text-sm opacity-50">FindingTimo</div>
+						</div>
+					</td>
+					<td></td>
+				</tr>
+				<tr>
+					<th>3</th>
+					<td>
+						<div>
+							<div class="font-bold">Ryan Shackleton</div>
+							<div class="text-sm opacity-50">FindingTimo</div>
+						</div>
+					</td>
+					<td></td>
+				</tr>
+				<tr>
+					<th>3</th>
+					<td>
+						<div>
+							<div class="font-bold">Ryan Shackleton</div>
+							<div class="text-sm opacity-50">FindingTimo</div>
+						</div>
+					</td>
+					<td></td>
+				</tr>
+				<tr>
+					<th>3</th>
+					<td>
+						<div>
+							<div class="font-bold">Ryan Shackleton</div>
+							<div class="text-sm opacity-50">FindingTimo</div>
+						</div>
+					</td>
+					<td></td>
+				</tr>
+				<tr>
+					<th>3</th>
+					<td>
+						<div>
+							<div class="font-bold">Ryan Shackleton</div>
+							<div class="text-sm opacity-50">FindingTimo</div>
+						</div>
+					</td>
+					<td></td>
+				</tr>
 				<tr>
 					<th>3</th>
 					<td>
