--- a/app/views/setup.templ
+++ b/app/views/setup.templ
@@ -8,9 +8,9 @@ import (
 templ Setup() {
 	@lib.BaseLayout() {
 		@components.Navbar()
-		<div id="setup-page-content" class="flex flex-col items-center">
+		<div id="setup-page-content" class="flex justify-center mt-24">
 			<div class="card bg-base-100 w-96 shadow-xl">
-				<div class="card-body">
+				<div id="card-step" class="card-body">
 					<div class="p-6 space-y-6">
 						<h2 class="text-2xl font-bold">We noticed you haven't linked your FPL account</h2>
 						// <p class="text-lg text-gray-600 font-medium">Let's get set up first!</p>
@@ -46,7 +46,7 @@ templ Setup() {
 							</svg>
 						</label>
 						<div class="card-actions justify-end">
-							<button class="btn btn-primary" hx-target="#team-search-result" hx-get="/app/fpl_team_id" hx-include="[name='teamID']">Check Team</button>
+							<button class="btn btn-primary" hx-target="#card-step" hx-get="/app/fpl_team_id" hx-include="[name='teamID']">Check Team</button>
 						</div>
 					</div>
 				</div>
