--- a/lib/base.templ
+++ b/lib/base.templ
@@ -4,6 +4,7 @@ templ BaseLayout() {
 	<html lang="en" data-theme="winter">
 		<head>
 			<title>OffsideFPL</title>
+			<link rel="icon" type="image/x-icon" href="/public/icon.png"/>
 			<meta charset="utf-8"/>
 			<link rel="icon" type="image/svg+xml" href="/favicon.svg"/>
 			<meta name="viewport" content="width=device-width"/>
@@ -14,6 +15,7 @@ templ BaseLayout() {
 			<link rel="preconnect" href="https://fonts.googleapis.com"/>
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
 			<link href="https://fonts.googleapis.com/css2?family=DotGothic16&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet"/>
+			<script src="https://unpkg.com/htmx.org@1.9.12/dist/ext/response-targets.js"></script>
 		</head>
 		<body class="antialiased overflow-auto font-brand bg-base-200" hx-ext="response-targets">
 			<div>
