--- a/app/components/navbar.templ
+++ b/app/components/navbar.templ
@@ -10,6 +10,7 @@ templ Navbar() {
 						<span class="text-base-content font-bold text-lg md:text-2xl [&::selection]:text-base-content relative col-start-1 row-start-1 bg-[linear-gradient(90deg,theme(colors.error)_0%,theme(colors.secondary)_9%,theme(colors.secondary)_42%,theme(colors.primary)_47%,theme(colors.accent)_100%)] bg-clip-text [-webkit-text-fill-color:transparent] [&::selection]:bg-blue-700/20 [@supports(color:oklch(0%_0_0))]:bg-[linear-gradient(90deg,oklch(var(--s))_4%,color-mix(in_oklch,oklch(var(--s)),oklch(var(--er)))_22%,oklch(var(--p))_45%,color-mix(in_oklch,oklch(var(--p)),oklch(var(--a)))_67%,oklch(var(--a))_100.2%)]">OffsideFPL</span>
 					</a>
 				</div>
+				@LeagueSelector()
 				<div class="flex justify-end items-center gap-2">
 					<div class="join">
 						<a class="btn btn-primary btn-sm join-item" hx-post="/auth/logout" hx-boost="true">Sign Out</a>
