Added icon to league selector

--- a/app/components/league_selector.templ
+++ b/app/components/league_selector.templ
@@ -9,7 +9,12 @@ templ LeagueSelector() {
 	<div class="flex flex-1 justify-end px-2" hx-get="/app/user_league_selection" hx-target="#league_dropdown" hx-swap="innerHTML" hx-trigger="load, click">
 		<div class="flex items-stretch">
 			<div class="dropdown dropdown-end">
-				<div tabindex="0" role="button" class="btn btn-ghost rounded-btn w-36">League</div>
+				<div tabindex="0" role="button" class="btn btn-ghost rounded-btn w-24">
+					League 
+					<svg width="12px" height="12px" class="hidden h-2 w-2 fill-current sm:inline-block" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2048 2048">
+						<path d="M1799 349l242 241-1017 1017L7 590l242-241 775 775 775-775z"></path>
+					</svg>
+				</div>
 				<ul
 					id="league_dropdown"
 					tabindex="0"
