Initialise League Functionality p2

--- a/app/components/league_selector.templ
+++ b/app/components/league_selector.templ
@@ -35,8 +35,8 @@ templ LeagueList(leagues []types.UserLeagueSelection) {
 				<a>{ league.LeagueName }</a>
 			</li>
 		} else {
-			<li class="bg-success rounded-lg" value={ league.ID }>
-				<a class="font-bold text-success-content">
+			<li class="bg-info rounded-lg" value={ league.ID }>
+				<a class="font-bold text-info-content">
 					<svg
 						xmlns="http://www.w3.org/2000/svg"
 						fill="none"
