--- a/app/components/team_check.templ
+++ b/app/components/team_check.templ
@@ -30,7 +30,7 @@ templ TeamCheck(teamID string, resp types.FPLUser) {
 					</button>
 					<button
 						class="btn btn-ghost btn-outline"
-						hx-get="/app/profile"
+						hx-get="/"
 					>
 						No
 					</button>
