Added refresh button on league selector

--- a/app/components/league_selector.templ
+++ b/app/components/league_selector.templ
@@ -35,7 +35,7 @@ templ LeagueList(leagues []types.UserLeagueSelection) {
 				<a>{ league.LeagueName }</a>
 			</li>
 		} else {
-			<li class="bg-info rounded-lg" value={ league.ID }>
+			<li class="bg-success rounded-lg" value={ league.ID }>
 				<a class="font-bold text-info-content">
 					<svg
 						xmlns="http://www.w3.org/2000/svg"
@@ -52,4 +52,11 @@ templ LeagueList(leagues []types.UserLeagueSelection) {
 			</li>
 		}
 	}
+	// <div class="py-2 px-4">
+	<li class="bg-info rounded-lg my-2">
+		<a class="font-bold text-info-content  justify-center">
+			Refresh
+		</a>
+	</li>
+	// </div>
 }
