--- a/app/components/league_selector.templ
+++ b/app/components/league_selector.templ
@@ -3,10 +3,10 @@ package components
 import "github.com/cmcd97/bytesize/app/types"
 
 templ LeagueSelector() {
-	<div class="flex flex-1 justify-end px-2" hx-get="/app/user_league_selection" hx-target="#league_dropdown" hx-swap="innerHTML" hx-trigger="load">
+	<div class="flex justify-end" hx-get="/app/user_league_selection" hx-target="#league_dropdown" hx-swap="innerHTML" hx-trigger="load">
 		<div class="flex items-stretch">
 			<div class="dropdown dropdown-end ">
-				<div tabindex="0" role="button" class="btn btn-ghost rounded-btn w-24">
+				<div tabindex="0" role="button" class="btn btn-ghost rounded-btn">
 					League 
 					<svg width="12px" height="12px" class="h-2 w-2 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2048 2048">
 						<path d="M1799 349l242 241-1017 1017L7 590l242-241 775 775 775-775z"></path>
@@ -53,8 +53,8 @@ templ LeagueList(leagues []types.UserLeagueSelection) {
 		}
 	}
 	// <div class="py-2 px-4">
-	<li class="bg-info rounded-lg my-2">
-		<a class="font-bold text-info-content  justify-center">
+	<li class="bg-primary rounded-lg my-2">
+		<a class="font-bold text-primary-content  justify-center">
 			Refresh
 		</a>
 	</li>
