Added Rules page request and minor UI changes

--- a/app/components/fines_table.templ
+++ b/app/components/fines_table.templ
@@ -7,18 +7,8 @@ templ FinesTable() {
 			<button class="btn btn-outline btn-sm btn-primary join-item w-24">Submit</button>
 			<button class="btn btn-outline btn-sm btn-secondary join-item w-24">Nominate</button>
 			<button class="btn btn-outline btn-sm btn-accent join-item text-accent-content w-24">Rebound</button>
-			// <div>
-			// 	<span>Next Deadline: </span>
-			// 	<span class="countdown font-mono text-2xl">
-			// 		<span style="--value:10;"></span>
-			// 		:
-			// 		<span style="--value:24;"></span>
-			// 		:
-			// 		<span style="--value:${counter};"></span>
-			// 	</span>
-			// </div>
 		</div>
-		<div class="overflow-x-auto w-72 rounded-lg">
+		<div class="overflow-x-auto w-72 rounded-lg font-small-text">
 			<table class="table table-xs">
 				<!-- head -->
 				<thead class="bg-primary text-primary-content font-bold">
