--- a/app/components/league_table.templ
+++ b/app/components/league_table.templ
@@ -3,7 +3,7 @@ package components
 templ LeagueTable() {
 	<div class="overflow-x-auto w-72 rounded-lg">
 		<p class="font-bold text-base-content">League Standings</p>
-		<table class="table table-xs">
+		<table class="table table-xs font-small-text">
 			<!-- head -->
 			<thead class="bg-secondary text-primary-content font-bold">
 				<tr>
