Added home navigation

--- a/app/components/menu.templ
+++ b/app/components/menu.templ
@@ -25,7 +25,7 @@ templ Menu() {
 					class="menu dropdown-content bg-base-100 rounded-box z-[1] mt-4 w-52 p-2 shadow"
 				>
 					<div class="overflow-y-auto max-h-96">
-						<li>
+						<li hx-get="/app/profile" hx-target="#home-page">
 							<a>
 								<svg
 									xmlns="http://www.w3.org/2000/svg"
