--- a/lib/base.templ
+++ b/lib/base.templ
@@ -18,7 +18,7 @@ templ BaseLayout() {
 			<script src="https://unpkg.com/htmx.org@1.9.12/dist/ext/response-targets.js"></script>
 		</head>
 		<body class="antialiased overflow-auto font-brand bg-base-200" hx-ext="response-targets">
-			<div>
+			<div id="home-page">
 				<!--content wrapper -->
 				{ children... }
 			</div>
