Add icons to league table and update theme to Dracula

--- a/lib/base.templ
+++ b/lib/base.templ
@@ -1,7 +1,7 @@
 package lib
 
 templ BaseLayout() {
-	<html lang="en" data-theme="winter">
+	<html lang="en" data-theme="dracula">
 		<head>
 			<title>OffsideFPL</title>
 			<link rel="icon" type="image/x-icon" href="/public/icon.png"/>
