--- a/app/components/league_table.templ
+++ b/app/components/league_table.templ
@@ -22,7 +22,11 @@ templ LeagueTable() {
 							<div class="text-sm opacity-50">AllhitsNoMisses</div>
 						</div>
 					</td>
-					<td></td>
+					<td>
+						<a href="/path/to/your/image.svg" target="_blank">
+							<img src="/public/assets/yellowRed.svg" class="h-4 w-4" alt="Icon"/>
+						</a>
+					</td>
 				</tr>
 				<!-- row 2 -->
 				<tr>
@@ -33,7 +37,11 @@ templ LeagueTable() {
 							<div class="text-sm opacity-50">JoaoPedroPedroPedro</div>
 						</div>
 					</td>
-					<td></td>
+					<td>
+						<a href="/path/to/your/image.svg" target="_blank">
+							<img src="/public/assets/yellow.svg" class="h-4 w-4" alt="Icon"/>
+						</a>
+					</td>
 				</tr>
 				<!-- row 3 -->
 				<tr>
@@ -44,7 +52,11 @@ templ LeagueTable() {
 							<div class="text-sm opacity-50">FindingTimo</div>
 						</div>
 					</td>
-					<td></td>
+					<td>
+						<a href="/path/to/your/image.svg" target="_blank">
+							<img src="/public/assets/red.svg" class="h-4 w-4" alt="Icon"/>
+						</a>
+					</td>
 				</tr>
 				<tr>
 					<th>3</th>
