--- a/app/components/fines_table.templ
+++ b/app/components/fines_table.templ
@@ -15,32 +15,48 @@ templ FinesTable(cards []types.DatabaseCard) {
 			<button class="btn btn-outline btn-sm btn-accent join-item text-accent-content w-24">Rebound</button>
 		</div>
 		if len(cards) == 0 {
-			<p class="text-base-content">No cards to display</p>
-		}
-		<div class="overflow-x-auto w-72 rounded-lg font-small-text">
-			<table class="table table-xs">
-				<!-- head -->
-				<thead class="bg-primary text-primary-content font-bold">
-					<tr>
-						<th>Week</th>
-						<th>Reason</th>
-						<th></th>
-						<th></th>
-					</tr>
-				</thead>
-				<tbody class="bg-base-100">
-					for _, card := range cards {
+			<div role="alert" class="alert alert-info">
+				<svg
+					xmlns="http://www.w3.org/2000/svg"
+					class="h-6 w-6 shrink-0 stroke-current"
+					fill="none"
+					viewBox="0 0 24 24"
+				>
+					<path
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						stroke-width="2"
+						d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
+					></path>
+				</svg>
+				<span>No outstanding cards</span>
+			</div>
+		} else {
+			<div class="overflow-x-auto w-72 rounded-lg font-small-text">
+				<table class="table table-xs">
+					<!-- head -->
+					<thead class="bg-primary text-primary-content font-bold">
 						<tr>
-							<th>{ strconv.Itoa(card.Gameweek) }</th>
-							<td>
-								{ lib.ReplaceUnderscoresWithSpaces(card.Type) }
-							</td>
-							<td><button class="btn btn-xs btn-outline btn-primary">details</button></td>
-							<td><button class="btn btn-xs btn-outline btn-accent">submit</button></td>
+							<th>Week</th>
+							<th>Reason</th>
+							<th></th>
+							<th></th>
 						</tr>
-					}
-				</tbody>
-			</table>
-		</div>
+					</thead>
+					<tbody class="bg-base-100">
+						for _, card := range cards {
+							<tr>
+								<th>{ strconv.Itoa(card.Gameweek) }</th>
+								<td>
+									{ lib.ReplaceUnderscoresWithSpaces(card.Type) }
+								</td>
+								<td><button class="btn btn-xs btn-outline btn-primary">details</button></td>
+								<td><button class="btn btn-xs btn-outline btn-accent">submit</button></td>
+							</tr>
+						}
+					</tbody>
+				</table>
+			</div>
+		}
 	</div>
 }
