--- a/public/styles.css
+++ b/public/styles.css
@@ -905,6 +905,11 @@ video {
   line-height: 1.25rem;
 }
 
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -980,10 +985,6 @@ video {
 
 .\[-webkit-text-fill-color\:transparent\] {
   -webkit-text-fill-color: transparent;
-}
-
-.\[i\:end\] {
-  i: end;
 }
 
 .\[transform\:translate3d\(0\2c 0\2c 0\)\] {
