Add league standings retrieval and display; refactor LeagueTable component and update styles

--- a/app/components/fines_table.templ
+++ b/app/components/fines_table.templ
@@ -15,7 +15,7 @@ templ FinesTable(cards []types.DatabaseCard) {
 			<button class="btn btn-outline btn-sm btn-accent join-item text-accent-content w-24">Rebound</button>
 		</div>
 		if len(cards) == 0 {
-			<div role="alert" class="alert alert-info">
+			<div role="alert" class="alert bg-neutral">
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
 					class="h-6 w-6 shrink-0 stroke-current"
