--- a/app/components/league_table.templ
+++ b/app/components/league_table.templ
@@ -6,44 +6,46 @@ import (
 )
 
 templ LeagueTable(leagueRows []types.LeagueStandingRow, gameweek int) {
-	<div class="overflow-x-auto w-72 rounded-lg">
+	<div class="w-72 rounded-lg">
 		<p class="font-bold text-base-content">League Standings</p>
-		<table class="table table-xs font-small-text">
-			<!-- head -->
-			<thead class="bg-secondary text-primary-content font-bold">
-				<tr>
-					<th>Pos</th>
-					<th>Player</th>
-					<th>GW{ strconv.Itoa(gameweek) }</th>
-					<th>Total</th>
-				</tr>
-			</thead>
-			<tbody class="bg-base-100">
-				for _, row := range leagueRows {
-					<tr>
-						<th>{ strconv.Itoa(row.Position) }</th>
-						<td>
-							<div>
-								<div class="font-bold flex flex-row gap-2">
-									{ row.FirstName }
-									if row.CardCount >= 2 {
-										<a href="/path/to/your/image.svg" target="_blank">
-											<img src="/public/assets/yellowRed.svg" class="h-4 w-4" alt="Icon"/>
-										</a>
-									} else if row.CardCount == 1 {
-										<a href="/path/to/your/image.svg" target="_blank">
-											<img src="/public/assets/yellow.svg" class="h-4 w-4" alt="Icon"/>
-										</a>
-									}
-								</div>
-								<div class="text-sm opacity-50">{ row.TeamName }</div>
-							</div>
-						</td>
-						<td>{ strconv.Itoa(row.GameweekPoints) }</td>
-						<td>{ strconv.Itoa(row.TotalPoints) }</td>
+		<div class="overflow-x-scroll h-96 w-full min-h-0 rounded-md">
+			<table class="table table-xs table-pin-rows w-full">
+				<!-- head -->
+				<thead>
+					<tr class="bg-secondary text-primary-content font-bold">
+						<th>Pos</th>
+						<th>Player</th>
+						<th>GW{ strconv.Itoa(gameweek) }</th>
+						<th>Total</th>
 					</tr>
-				}
-			</tbody>
-		</table>
+				</thead>
+				<tbody class="bg-base-100">
+					for _, row := range leagueRows {
+						<tr>
+							<th>{ strconv.Itoa(row.Position) }</th>
+							<td>
+								<div>
+									<div class="font-bold flex flex-row">
+										{ row.FirstName }
+										if row.CardCount >= 2 {
+											<a href="/path/to/your/image.svg" target="_blank">
+												<img src="/public/assets/yellowRed.svg" class="h-4 w-4" alt="Icon"/>
+											</a>
+										} else if row.CardCount == 1 {
+											<a href="/path/to/your/image.svg" target="_blank">
+												<img src="/public/assets/yellow.svg" class="h-4 w-4" alt="Icon"/>
+											</a>
+										}
+									</div>
+									<div class="text-sm opacity-50">{ row.TeamName }</div>
+								</div>
+							</td>
+							<td>{ strconv.Itoa(row.GameweekPoints) }</td>
+							<td>{ strconv.Itoa(row.TotalPoints) }</td>
+						</tr>
+					}
+				</tbody>
+			</table>
+		</div>
 	</div>
 }
